<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtmaps_ros2_custom_canfd_bridge</name>
  <version>1.0.0</version>
  <description>RTMAPS - ROS2 CANFD bridge</description>
  <maintainer email="thomas.coffy@intempora.com">Thomas Coffy</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>canfd_msgs</depend>
  <build_depend>rcutils</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

